Revert to only using a link element to indicate the decor url.

--- a/test/html/normal.html
+++ b/test/html/normal.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="normal.css" />
-<script src="../../HTMLDecor.js" data-href="decor.html" data-type="text/decor+html" data-main="main"></script>
+<link rel="meeko-decor" type="text/decor+html" href="decor.html" />
+<script src="../../HTMLDecor.js" data-main="main"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
 .remove { background-color: red; color: white; }
