Dispense with the concept of #main content and allow any child of body that has an ID to be placed into the decor

--- a/test/html/decor.html
+++ b/test/html/decor.html
@@ -4,17 +4,20 @@
 <link rel="stylesheet" href="decor.css" />
 </head>
 <body>
-<div class="header">
-Header provided by decor
+<div id="header" class="section">
+#header in decor
+<div id="page-header" class="remove">
+#page-header in decor: You should NOT be able to see this.
 </div>
-<div>
-Wrapper provided by decor
-<div id="main">
 </div>
-End of wrapper
+<div id="page-main" class="remove">
+#page-main in decor: You should NOT be able to see this.
 </div>
-<div class="footer">
-Footer provided by decor
+<div id="footer" class="section">
+#footer in decor
+<div id="page-footer" class="remove">
+#page-footer in decor: You should NOT be able to see this.
+</div>
 </div>
 </body>
 </html>
