--- a/test/html/normal.html
+++ b/test/html/normal.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="normal.css" />
 <link rel="meeko-decor" type="text/decor+html" href="decor.html" />
-<script src="../../HTMLDecor.js" data-main="main"></script>
+<script src="../../HTMLDecor.js"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
 .remove { background-color: red; color: white; }
@@ -14,12 +14,16 @@ div { margin: 0.5em; border: 1px dashed black; }
 </head>
 <body>
 <div class="remove">
-You should NOT be able to see this content that precedes #main. <br />
-It is styled with:<br />
-<code>.remove { background-color: red; color: white; }</code>
+before #page-banner: You should NOT be able to see this content. 
 </div>
-<div id="main">
-<p>Main content</p>
+<div id="page-header">
+#page-header
+</div>
+<div class="remove">
+before #page-main: You should NOT be able to see this content. 
+</div>
+<div id="page-main">
+#page-main
 <div class="normal">
 This content is styled by normal.css <br />
 <code>
@@ -40,7 +44,10 @@ This content is styled by decor.css <br />
 
 </div>
 <div class="remove">
-You should NOT be able to see this content that follows #main.
+after #main: You should NOT be able to see this content. 
+</div>
+<div id="page-footer">
+#page-footer
 </div>
 </body>
 </html>
