Ensure that <meta>, <style>, <title> elements are copied properly from decor document into the head.

--- a/test/html/decor.html
+++ b/test/html/decor.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="decor.css" />
+<style>
+.style-fail { display: none; }
+</style>
 </head>
 <body>
+<div class="style-fail" style="background-color: red;">
+If you can see this then &lt;style&gt; elements
+from the decor document aren't being imported.
+</div> 
+
 <div id="header" class="section">
 #header in decor
 <div id="page-header" class="remove">
