--- a/test/html/decor.html
+++ b/test/html/decor.html
@@ -13,8 +13,8 @@ If you can see this then &lt;style&gt; elements
 from the decor document aren't being imported.
 </div> 
 
-<div id="header" class="section">
-#header in decor
+<div id="decor-header" class="section">
+#decor-header
 <div id="page-header" class="remove">
 #page-header in decor: You should NOT be able to see this.
 </div>
@@ -22,8 +22,8 @@ from the decor document aren't being imported.
 <div id="page-main" class="remove">
 #page-main in decor: You should NOT be able to see this.
 </div>
-<div id="footer" class="section">
-#footer in decor
+<div id="decor-footer" class="section">
+#decor-footer
 <div id="page-footer" class="remove">
 #page-footer in decor: You should NOT be able to see this.
 </div>
