Change test-pages to allow pre-processed and normal decor documents. These have effectively been the same as scripts in decor weren't supported. Supporting scripts in decor involves pre-processing, either on the server or within HTMLDecor.js.

--- a/test/html/normal.html
+++ b/test/html/normal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="normal.css" />
-<link rel="meeko-decor" type="text/decor+html" href="decor.html" />
+<link rel="meeko-decor" type="text/html" href="decor/decor.html" />
 <script src="../../HTMLDecor.js"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
