--- a/test/html/decor/decor.html
+++ b/test/html/decor/decor.html
@@ -28,6 +28,16 @@ from the decor document aren't being imported.
 #page-footer in decor: You should NOT be able to see this.
 </div>
 </div>
+<div id="remove" class="remove">
+#remove in decor: You should NOT be able to see this - 
+it is removed by a script.
+</div>
+<script type="text/javascript" async>
+(function() { 
+	var el = document.getElementById("remove");
+	el.parentNode.removeChild(el);
+})();
+</script>
 </body>
 </html>
 
