Hidden timeout now 0(ms) rather than 3000(ms). Different config name too.

--- a/test/normal.html
+++ b/test/normal.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="normal.css" />
 <link rel="meeko-decor" type="text/html" href="decor/decor.html" />
-<script src="../HTMLDecor.js" data-autostart="yes"></script>
+<script src="../HTMLDecor.js" data-autostart="yes" data-hidden-timeout="3000"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
 .remove { background-color: red; color: white; }
