Scripts will never execute in decor (or HTMLRequest) context

--- a/test/decor/decor.html
+++ b/test/decor/decor.html
@@ -32,7 +32,7 @@ from the decor document aren't being imported.
 #remove in decor: You should NOT be able to see this - 
 it is removed by a script.
 </div>
-<script type="text/javascript" async>
+<script type="text/javascript">
 if (window == top) (function() { 
 	var el = document.getElementById("remove");
 	el.parentNode.removeChild(el);
