--- a/test/alternate.html
+++ b/test/alternate.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="normal.css" />
-<link rel="meeko-decor" type="text/html" href="decor/decor.html" />
+<link rel="meeko-decor" type="text/html" href="decor/alternate.html" />
+<link rel="meeko-decor" type="text/html" data-user-theme="normal" href="decor/decor.html" />
 <script src="../HTMLDecor.js"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
@@ -18,7 +19,10 @@ before #page-banner: You should NOT be able to see this content.
 </div>
 <div id="page-header">
 #page-header
-<h1>Normal test-page</h1>
+<h1>Alternate decor test page</h1>
+<p>This page is basically <a href="normal.html">normal.html</a> with <a href="decor/alternate.html">alternate</a> decor by default. </p>
+<p>It also contains an iframe which tests the decor-specified alternate decor.</p>
+
 </div>
 <div class="remove">
 before #page-main: You should NOT be able to see this content. 
@@ -49,7 +53,12 @@ after #main: You should NOT be able to see this content.
 </div>
 <div id="page-footer">
 #page-footer
+<h2>The following frame shows <a href="normal.html">normal.html</a> with alternate decor</h2>
+<iframe src="normal.html" data-theme="alternate" style="width: 100%; height: 100%;"></iframe>
+<h2>The following frame shows <a href="normal.html">normal.html</a> with normal decor</h2>
+<iframe src="normal.html" style="width: 100%; height: 100%;"></iframe>
 </div>
+
 </body>
 </html>
 
