Firefox was warning that document had no charset

--- a/test/normal.html
+++ b/test/normal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <link rel="stylesheet" href="normal.css" />
 <link rel="meeko-decor" type="text/html" href="decor/decor.html" />
 <script src="../HTMLDecor.js"></script>
