--- a/test/alternate.html
+++ b/test/alternate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <link rel="stylesheet" href="normal.css" />
 <link rel="meeko-decor" type="text/html" href="decor/alternate.html" />
 <link rel="meeko-decor" type="text/html" data-user-theme="normal" href="decor/decor.html" />
