HTMLDecor.js no longer auto-starts - boot.js takes care of this.

--- a/test/alternate.html
+++ b/test/alternate.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="normal.css" />
 <link rel="meeko-decor" type="text/html" href="decor/alternate.html" />
 <link rel="meeko-decor" type="text/html" data-user-theme="normal" href="decor/decor.html" />
-<script src="../HTMLDecor.js"></script>
+<script src="../boot.js"></script>
 <style type="text/css">
 div { margin: 0.5em; border: 1px dashed black; }
 .remove { background-color: red; color: white; }
