Refactor DOM.parseHTML to allow a `prepare(doc)` call before the parser writes. This enables HTML5 elements in old IE.

--- a/test/normal.html
+++ b/test/normal.html
@@ -26,12 +26,12 @@ before #page-main: You should NOT be able to see this content.
 </div>
 <div id="page-main">
 #page-main
-<div class="normal">
-This content is styled by normal.css <br />
+<section class="normal">
+This &lt;section&gt; box is styled by normal.css <br />
 <code>
 .normal { border: 2px solid green; }
 </code>
-</div>
+</section>
 <div class="nodecor">
 This content should NOT have the following style 
 unless the decor isn't loaded. <br />
