Github Markdown auto-ids use lower-case.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ for your obligations if you intend to modify or distribute HTMLDecor or part the
 
 <p><strong>This is the old way of specifying decor, but is conceptually easiest to understand.</strong>
 <strong>If you are new to HTMLDecor then read this documentation straight through.</strong>
-<strong>Otherwise feel free to skip to the <a href="#Configuration">Configuration</a> section first.</strong></p>
+<strong>Otherwise feel free to skip to the <a href="#configuration">Configuration</a> section first.</strong></p>
 
 <p>Create a HTML document (page.html) with some page specific content -
 elements that are children of <code>&lt;body&gt;</code> and have <code>@id</code>. 
@@ -435,7 +435,7 @@ You may find debugging easier in a different browser. </p>
 
 <h3>Preparation</h3>
 
-<p>Assuming the default <a href="#Installation">installation</a> was successful,
+<p>Assuming the default <a href="#installation">installation</a> was successful,
 use these steps to prepare for site specific configuration.</p>
 
 <ol>
@@ -599,7 +599,7 @@ which can be accessed directly or by calling </p>
 that will overwrite current values.</p>
 
 <p>Configuration should be done before HTMLDecor starts. 
-This can be achieved by editing the site-specific <code>config.js</code> created during <a href="#Preparation">Preparation</a>.</p>
+This can be achieved by editing the site-specific <code>config.js</code> created during <a href="#preparation">Preparation</a>.</p>
 
 <p>Usually you only want to configure how HTMLDecor determines the appropriate decor-document for a page. 
 Do this by providing one of the following options: </p>
@@ -631,10 +631,10 @@ that will overwrite current values.</p>
 
 <p>Typically you only want to configure panner animation options.
 These would be set in the decor-document,
-as dealt with in <a href="#Page Transition Animation">Page Transition Animation</a>.</p>
+as dealt with in <a href="#page-transition-animation">Page Transition Animation</a>.</p>
 
 <p>All other configuration should be done before HTMLDecor starts. 
-This can be achieved by editing the site-specific <code>config.js</code> created during <a href="#Preparation">Preparation</a>.</p>
+This can be achieved by editing the site-specific <code>config.js</code> created during <a href="#preparation">Preparation</a>.</p>
 
 <h4>Pre-decorated pages</h4>
 
