--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@ for your obligations if you intend to modify or distribute HTMLDecor or part the
 
 <p>Visually inspect the displayed page for the following possible failures:</p>
 
-<pre><code>- boxes with **red** background or borders. 
-- boxes that claim to be styled with colored borders but just have the default border.
-</code></pre></li>
+<ul>
+<li>boxes with <strong>red</strong> background or borders. </li>
+<li>boxes that claim to be styled with colored borders but just have the default border. </li>
+</ul></li>
 <li><p>Source the HTMLDecor boot-script into your pages, with this line in the <code>&lt;head&gt;</code> of each page </p>
 
 <pre><code>`&lt;script src="/path/to/HTMLDecor/boot.js"&gt;&lt;/script&gt;`
