Update docs for notifications message objects

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ If it is the same as the current decor then the page is downloaded and used to r
 You could use it by placing something like the following in your <strong>decor document</strong></p>
 
 <pre><code>Meeko.panner.config({
-    duration: 0, // minimum time (ms) between paging start and end
+    duration: 0, // minimum time (ms) between paging start and end. 
     nodeRemoved: {
         before: hide, // handler for before a content node leaves the page. Called at start of transition.
         after: show // handler for after a content node leaves the page. Cannot be called before duration has expired. 
@@ -321,8 +321,8 @@ You could use it by placing something like the following in your <strong>decor d
     }
 });
 
-function hide(node) { node.setAttribute("hidden", "hidden"); }
-function show(node) { node.removeAttribute("hidden"); }
+function hide(msg) { msg.node.setAttribute("hidden", "hidden"); }
+function show(msg) { msg.node.removeAttribute("hidden"); }
 function noop() {}
 </code></pre>
 
@@ -338,7 +338,7 @@ then the new nodes replace the old nodes directly, rather than transitioning thr
 
 <pre><code>&lt;script&gt;
 Meeko.panner.config({
-    duration: 500
+    duration: 500 // allows our fade-out to complete
 });
 &lt;/script&gt;
 &lt;style&gt;
@@ -363,7 +363,8 @@ the following will install them in the view-document when the page is panned in:
 <pre><code>&lt;script&gt;
 Meeko.panner.config({
     pageIn: {
-        before: function(doc) {
+        before: function(msg) {
+            var doc = msg.node;
             if (document == doc) return;
             document.documentElement.className = doc.documentElement.className;
             document.body.className = doc.body.className;
