--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ Do this by providing a <code>request(url, data, details, callback)</code> functi
             if (!/GET/i.test(method)) throw "Only supporting GET requests";
             var rq = new XMLHttpRequest;
             rq.open(method, url, true);
-            rq.setRequestHeader('Accept-Type', 'application/json');
+            rq.setRequestHeader('Accept', 'application/json');
             rq.onreadystatechange = onchange;
             rq.send();
             function onchange() {
