Forgot to include index.html two commits ago.

--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@ will be removed from the page before the decor document is applied, e.g.</p>
 <pre><code>&lt;style title="nodecor"&gt;body { max-width: 72ex; }&lt;/style&gt;
 </code></pre>
 
+<p><strong>NOTE:</strong> this is done in the default <code>config.js</code>.
+If you want to remove or modify this behavior then do so in your site-specific <code>config.js</code>.</p>
+
 <h3>Auxiliary content</h3>
 
 <p>Children of <code>&lt;body&gt;</code> which have no <code>@id</code>,
