Non-existant stylesheet

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" href="decor.css" />
+<link rel="stylesheet" href="decor/decor.css" />
 <style>
 body { background-color: #ffffff; }
 #panner { background-color: #77ff77; color: #ffffff; text-align: center; }
