Forgot to include updated index.html to match re-ordered README.md

--- a/index.html
+++ b/index.html
@@ -48,20 +48,10 @@ The navbar and contact popup are all in the <a href="http://meekostuff.net/blog/
 
 <p>Also make sure you check the <a href="https://github.com/meekostuff/HTMLDecor/wiki">wiki</a>.</p>
 
-<p>If you have any questions or comments, don't hesitate to contact the author via
-<a href="http://meekostuff.net/">web</a>, <a href="mailto:shogun70@gmail.com">email</a> or <a href="http://twitter.com/meekostuff">twitter</a>. </p>
-
-<h2>License</h2>
-
-<p>HTMLDecor is available under 
-<a href="http://www.mozilla.org/MPL/2.0/" title="Mozilla Public License version 2.0">MPL 2.0</a>.
-See the <a href="http://www.mozilla.org/MPL/2.0/FAQ.html" title="Frequently Asked Questions">MPL 2.0 FAQ</a>
-for your obligations if you intend to modify or distribute HTMLDecor or part thereof. </p>
-
 <h2>Installation</h2>
 
 <ol>
-<li><p>Copy or clone the HTMLDecor files to a directory on your server, say </p>
+<li><p>Copy or clone the HTMLDecor project files to a directory on your server, say </p>
 
 <pre><code>/path/to/HTMLDecor/
 </code></pre></li>
@@ -785,6 +775,18 @@ The work-around for this is to use absolute-paths or absolute-URLs (which you sh
 <li>this README is too long - needs to be split up into sub-sections</li>
 <li>some features would be best explained with demo pages / sites </li>
 </ul>
+
+<h2>License</h2>
+
+<p>HTMLDecor is available under 
+<a href="http://www.mozilla.org/MPL/2.0/" title="Mozilla Public License version 2.0">MPL 2.0</a>.
+See the <a href="http://www.mozilla.org/MPL/2.0/FAQ.html" title="Frequently Asked Questions">MPL 2.0 FAQ</a>
+for your obligations if you intend to modify or distribute HTMLDecor or part thereof. </p>
+
+<h2>Contact</h2>
+
+<p>If you have any questions or comments, don't hesitate to contact the author via
+<a href="http://meekostuff.net/">web</a>, <a href="mailto:shogun70@gmail.com">email</a> or <a href="http://twitter.com/meekostuff">twitter</a>. </p>
 </div>
 
 
