Change the name of the iframe used for parsing. It isn't just '_decor' specific, so call it 'meeko-parser'

--- a/test/decor/decor.html
+++ b/test/decor/decor.html
@@ -65,7 +65,7 @@ from the decor document aren't being imported.
 it is removed by a script.
 </div>
 <script type="text/javascript">
-if (window.name != "_decor") (function() { 
+if (window.name != "meeko-parser") (function() { 
 	var el = document.getElementById("remove");
 	el.parentNode.removeChild(el);
 })();
