Add a long content page (long.html) to see performance of html-parsing

--- a/test/decor/decor.html
+++ b/test/decor/decor.html
@@ -31,6 +31,7 @@ Meeko.panner.config({
 <nav>
 <ul>
 	<li><a href="../normal.html">normal</a></li>
+	<li><a href="../long.html">long</a></li>
 	<li><a href="../get.html">get</a></li>
 	<li><a href="../post.html">post</a></li>
 </ul>
@@ -71,6 +72,7 @@ if (window.name != "meeko-parser") (function() {
 })();
 else alert("Error: script was executed in " + window.name + " document context");
 </script>
+
 </body>
 </html>
 
