Add hyperlink to the long test page

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@ body { background-color: #ffffff; }
 <p>Links to all these tests are included in the decor document and SHOULD appear at the top of each test-page. </p>
 <ul>
 	<li><a href="./normal.html">normal</a></li>
+	<li><a href="./long.html">long</a></li>
 	<li><a href="./get.html">get</a></li>
 	<li><a href="./post.html">post</a></li>
 </ul>
