<title> in test pages

--- a/test/long.html
+++ b/test/long.html
@@ -5,6 +5,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<title>long.html</title>
 <link rel="meeko-decor" type="text/html" href="decor/decor.html" />
 <link rel="stylesheet" href="normal.css" />
 <style type="text/css">
