--- a/test/get.html
+++ b/test/get.html
@@ -5,6 +5,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<title>get.html</title>
 <link rel="meeko-decor" type="text/html" href="decor/decor.html" />
 <link rel="stylesheet" href="normal.css" />
 <style type="text/css">
