Library size never decreases. Now around 11kB minified and gzipped.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ When someone viewing your page clicks on a link to another page that uses the sa
 then AJAX updates the real content
 and <code>history.pushState()</code> updates the browser URL. </p>
 
-<p>HTMLDecor.js is less than 10kB when minified and gzipped.</p>
+<p>HTMLDecor.js is around 10kB when minified and gzipped.</p>
 
 <p>To see it in action visit my <a href="http://meekostuff.net/blog/">blog</a>.
 Make sure you view the page source and check that it is just raw content.
