Update docs on supported html5shiv elements

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ The navbar and contact popup are all in the <a href="http://meekostuff.net/blog/
 <li>boxes with <strong>red</strong> background or borders. </li>
 <li>boxes that claim to be styled with colored borders but just have the default border. </li>
 </ul></li>
-<li><p>Source the HTMLDecor boot-script into your pages, with this line in the <code>&lt;head&gt;</code> of each page </p>
+<li><p>Source the HTMLDecor boot-script into your pages with this line in the <code>&lt;head&gt;</code> of each page </p>
 
 <pre><code>`&lt;script src="/path/to/HTMLDecor/boot.js"&gt;&lt;/script&gt;`
 </code></pre>
@@ -586,7 +586,7 @@ The boot-script has the following options (default values in <strong>bold</stron
 <li>capturing: true, <strong>false</strong></li>
 <li>hidden_timeout: <strong>3000</strong> (milliseconds)</li>
 <li>html5_block_elements: <strong>"article aside figcaption figure footer header hgroup main nav section"</strong></li>
-<li>html5_inline_elements: <strong>"abbr mark output"</strong></li>
+<li>html5_inline_elements: <strong>"abbr mark output time audio video picture"</strong></li>
 <li>config_script: <strong>"{bootscriptdir}config.js"</strong></li>
 </ul>
 
